Cells that loads the train test for retinanet from CSV to show difference between labels count of train and test set.
Evaluation of inference model result on the test set.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 retinanet_snapshot/resnet50_csv_12.h5 filter=lfs diff=lfs merge=lfs -text
 *.h5 filter=lfs diff=lfs merge=lfs -text
 retinanet_snapshot/resnet50_csv_10.h5 filter=lfs diff=lfs merge=lfs -text
+fullsize_train_annotations.csv filter=lfs diff=lfs merge=lfs -text
